--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,6 @@
 name: 'KiCad BOM'
 description: 'Generates a BOM for a specified schematic and places them in a specified directory'
+author: 'Emily McLean'
 inputs:
   input-file:
     description: 'The PCB file to process'
@@ -13,3 +14,6 @@ runs:
   args:
     - ${{ inputs.input-file }}
     - ${{ inputs.output-file }}
+branding:
+  icon: 'cpu'
+  color: 'green'
