Correct name of input arg

--- a/action.template.yml
+++ b/action.template.yml
@@ -13,7 +13,7 @@ runs:
   image: '{{ .image }}'
   args:
     - ${{`{{ inputs.input-file }}`}}
-    - ${{`{{ inputs.output-directory }}`}}
+    - ${{`{{ inputs.output-file }}`}}
 branding:
   icon: 'cpu'
   color: 'green'
