--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,6 +101,15 @@ jobs:
           result_path: action.yml
           vars: |
             image: docker://ghcr.io/${{ env.REPOSITORY_LC }}:${{ needs.version.outputs.version }}
+      - name: Update README.md
+        uses: recih/template-render-action@v1.0.2
+        env:
+          ACTION_REPO: ${{ github.repository }}
+          ACTION_VERSION: ${{ needs.version.outputs.version }}
+        with:
+          template-file: templates/README.template.md
+          output-file: README.md
+          engine: mustache
       - uses: stefanzweifel/git-auto-commit-action@v5
         id: auto-commit
   release-main:
