--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,7 +97,7 @@ jobs:
         id: render_template
         uses: chuhlomin/render-template@v1
         with:
-          template: action.template.yml
+          template: templates/action.template.yml
           result_path: action.yml
           vars: |
             image: docker://ghcr.io/${{ env.REPOSITORY_LC }}:${{ needs.version.outputs.version }}
