--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,18 +9,19 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.gitversion.outputs.semVer }}
+      major: ${{ steps.gitversion.outputs.major }}
     steps:
       - name: Check out code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           fetch-depth: '0'
       - name: Install GitVersion
-        uses: gittools/actions/gitversion/setup@v0.9.6
+        uses: gittools/actions/gitversion/setup@v3.0.0
         with:
           versionSpec: '5.x'
       - name: Use GitVersion
         id: gitversion # step id used as reference for output values
-        uses: gittools/actions/gitversion/execute@v0.9.6
+        uses: gittools/actions/gitversion/execute@v3.0.0
         with:
           useConfigFile: true
           configFilePath: ./gitversion.yml
@@ -35,19 +36,19 @@ jobs:
       packages: write
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Lowercase Repository
         run: |
           echo "REPOSITORY_LC=${REPOSITORY,,}" >>${GITHUB_ENV}
         env:
           REPOSITORY: '${{ github.repository }}'
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
       - name: Docker meta
         id: meta
-        uses: docker/metadata-action@v4
+        uses: docker/metadata-action@v5
         with:
           images: |
             ghcr.io/${{ env.REPOSITORY_LC }}
@@ -60,13 +61,13 @@ jobs:
             type=semver,pattern={{major}}
             type=sha
       - name: Log in to the Container registry
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        uses: docker/login-action@v3
         with:
           registry: https://ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push Docker image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v6
         with:
           context: .
           platforms: linux/amd64
@@ -87,7 +88,7 @@ jobs:
       contents: write
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Lowercase Repository
         run: |
           echo "REPOSITORY_LC=${REPOSITORY,,}" >>${GITHUB_ENV}
@@ -102,16 +103,18 @@ jobs:
           vars: |
             image: docker://ghcr.io/${{ env.REPOSITORY_LC }}:${{ needs.version.outputs.version }}
       - name: Update README.md
-        uses: recih/template-render-action@v1.0.2
+        uses: emilymclean/template-render-action@v1.0.2
         env:
           ACTION_REPO: ${{ github.repository }}
-          ACTION_VERSION: ${{ needs.version.outputs.version }}
+          ACTION_VERSION: ${{ needs.version.outputs.major }}
         with:
           template-file: templates/README.template.md
           output-file: README.md
           engine: mustache
       - uses: stefanzweifel/git-auto-commit-action@v5
         id: auto-commit
+        with:
+          commit_message: "Update metadata for ${{ github.event.commits[0].message }}"
   release-main:
     runs-on: ubuntu-latest
     needs: 
@@ -124,18 +127,23 @@ jobs:
     if: github.event_name != 'pull_request'
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+        uses: actions/checkout@v4
+      - name: Create tag for release
+        uses: rickstaa/action-create-tag@v1
+        with:
+          tag: v${{ needs.version.outputs.version }}
+      - id: create_release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: v${{ needs.version.outputs.version }}
-          release_name: Release ${{ needs.version.outputs.version }}
-          draft: false
+          name: Release ${{ needs.version.outputs.version }}
           prerelease: ${{ github.ref == 'refs/heads/develop' }}
-          commitish: ${{ needs.update-image.outputs.commit_hash }}
+      - uses: jimeh/update-tags-action@v1
+        if: github.ref == 'refs/heads/main'
+        with:
+          tags: v${{ needs.version.outputs.major }}
   release-other:
     runs-on: ubuntu-latest
     needs: 
@@ -147,14 +155,16 @@ jobs:
     if: github.event_name != 'pull_request' && github.ref != 'refs/heads/main'
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+        uses: actions/checkout@v4
+      - name: Create tag for release
+        uses: rickstaa/action-create-tag@v1
+        with:
+          tag: v${{ needs.version.outputs.version }}
+      - id: create_release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: v${{ needs.version.outputs.version }}
-          release_name: Release ${{ needs.version.outputs.version }}
-          draft: false
+          name: Release ${{ needs.version.outputs.version }}
           prerelease: ${{ github.ref == 'refs/heads/develop' }}
